# guitar-rig-dsp

./: .gitignore  README.md  package.json  server.js  vercel.json
api/: README.md  tone.js
juce/: CMakeLists.txt  README.md  ROADMAP.md
juce/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
public/: amp3d.js  app.js  index.html  manifest.webmanifest  service-worker.js
public/amps/: README.md
public/dsp/: amp-processor.js  chorus-processor.js  compressor-processor.js  delay-processor.js  eq-processor.js  fuzz-processor.js  gate-processor.js  looper-processor.js  overdrive-processor.js  phaser-processor.js  reverb-processor.js  tuner-processor.js
public/models/: README.md
public/pedals/: README.md
